# pioneers-3d

./: .gitignore  CMakeLists.txt  ChangeLog  Doxyfile  Doxyfile.in  Makefile.am  Makefile.in  NEWS  README.Cygwin  README.MinGW  README.md  README.subversion  TODO  autogen.sh  config.h.in  configure  configure.ac  pioneers.spec  pioneers.spec.in  plugins.cfg  ubuntu-requirements.txt
.circleci/: Dockerfile  GTK3Config.cmake  config.yml  install-requirements.sh  patch-ogre-deps-linux.patch
MinGW/: .gitignore  Makefile.am  README.txt  loaders.cache  pioneers.nsi.in
admin-scripts/: kill-game.sh  list.sh  locallobby.sh  locallobbybot.sh  meta.sh  remotelobby.sh  remotelobbybot.sh
client/: Makefile.am  callback.h
client/ai/: Makefile.am  ai.c  ai.h  genetic.c  genetic_core.c  genetic_core.h  greedy.c  lobbybot.c
client/common/: build.c  callback.c  client.c  client.h  develop.c  main.c  player.c  resource.c  robber.c  setup.c  stock.c  turn.c
client/gtk/: .gitignore  Makefile.am  admin-gtk.c  audio.c  audio.h  avahi-browser.c  avahi-browser.h  avahi.c  avahi.h  callbacks.c  chat.c  connect.c  develop.c  discard.c  frontend.c  frontend.h  gameover.c  gold.c  gui.c  gui.h  histogram.c  histogram.h  identity.c  interface.c  legend.c  monopoly.c  name.c  notification.c  notification.h  offline.c  pioneers.desktop.in  player.c  plenty.c  quote-view.c  quote-view.h  quote.c  resource-table.c  resource-table.h  resource-view.gob  resource.c  (+3 more)
client/gtk/data/: .gitignore  Makefile.am
client/gtk/data/themes/: Makefile.am
client/gtk/data/themes/Iceland/: theme.cfg
client/gtk/data/themes/Nouvellia/: ATTRIB  Makefile.am  theme.cfg
client/gtk/data/themes/Tiny/: theme.cfg
client/gtk/data/themes/ccFlickr/: theme.cfg
client/gtk/ogre/: engine.cpp  engine.h  engine_base.cpp  engine_base.h  main.cpp  main.h  map_entities.cpp  map_entities.h  map_renderer.cpp  map_renderer.h  player.cpp  player.h
client/help/: Makefile.am
client/help/C/: gitignore  index.docbook
common/: .gitignore  Makefile.am  buildrec.c  buildrec.h  cards.c  cards.h  common_glib.c  common_glib.h  cost.c  cost.h  deck.c  deck.h  driver.c  driver.h  game-list.c  game-list.h  game.c  game.h  log.c  log.h  map.c  map.h  map_query.c  network.c  network.h  notifying-string.gob  quoteinfo.c  quoteinfo.h  random.c  random.h  set.c  set.h  state.c  state.h
common/gtk/: .gitignore  Makefile.am  aboutbox.c  aboutbox.h  colors.c  colors.h  common_gtk.c  common_gtk.h  config-gnome.c  config-gnome.h  game-rules.c  game-rules.h  game-settings.c  game-settings.h  guimap.c  guimap.h  map-icons.c  map-icons.h  metaserver.c  metaserver.h  player-icon.c  player-icon.h  polygon.c  polygon.h  scrollable-text-view.gob  select-game.c  select-game.h  theme.c  theme.h
debian/: .gitignore  changelog  control  copyright  pioneers-builddep  pioneers-console-data.install  pioneers-console.install  pioneers-data.install  pioneers-metaserver.config  pioneers-metaserver.init  pioneers-metaserver.install  pioneers-metaserver.manpages  pioneers-metaserver.postinst  pioneers-metaserver.postrm  pioneers-metaserver.templates  pioneers.install  pioneers.manpages  release-checklist  rules  watch
debian/po/: POTFILES.in  cs.po  da.po  de.po  en_GB.po  es.po  eu.po  fi.po  fr.po  gl.po  it.po  ja.po  nl.po  pt.po  pt_BR.po  ru.po  sv.po  vi.po
debian/upstream/: signing-key.asc
docs/: Makefile.am  README.message_flow  README.release  README.server_protocol_version  Relicense question about icons from the Gorilla theme.eml  pioneers-editor.6  pioneers-metaserver.6  pioneers-server-console.6  pioneers-server-gtk.6  pioneers.6  pioneersai.6
editor/: Makefile.am
editor/gtk/: .gitignore  Makefile.am  editor.c  game-buildings.c  game-buildings.h  game-devcards.c  game-devcards.h  game-resources.c  game-resources.h  pioneers-editor.desktop.in
metaserver/: Makefile.am  README.protocol  main.c  meta-report
ogre_resources/: RobberMaterial.material  default.material  default.program  hex.material  mesh_materials.material
ogre_resources/__design/: robber.blend  sources  village_basic.blend
ogre_resources/__design/numbers/: base.xcf  numlayer.xcf
ogre_resources/meshes/: Cube.mesh  Cube.mesh.xml  DesertMaterial.material  DesertMaterial2.material  Icosphere.mesh  Icosphere.mesh.xml  Material.material  city.mesh  city.mesh.xml  desert.mesh  desert.mesh.xml  numchip.mesh  numchip.mesh.xml  path815.mesh  path815.mesh.xml  robber.mesh  robber.mesh.xml  simpleroad.mesh  simpleroad.mesh.xml  village.mesh  village.mesh.xml  village2.scene  village_material.material
ogre_resources/shaders/: default.frag  default.vert  default_no_texture.frag  default_overlay.frag  desert_ground.frag  desert_ground.vert
po/: .gitignore  ChangeLog  LINGUAS  POTFILES.in  af.po  ca.po  cs.po  da.po  de.po  en_GB.po  es.po  fr.po  gl.po  hu.po  it.po  ja.po  nl.po  pioneers.pot  pt.po  sk.po  sv.po  zh_CN.po
server/: 5-6-player.game  Another_swimming_pool_in_the_wall.game  Cube.game  Evil_square.game  GuerreDe100ans.game  Makefile.am  Mini_another_swimming_pool_in_the_wall.game  admin.c  admin.h  archipel_gold.game  avahi.c  avahi.h  buildutil.c  canyon.game  coeur.game  conquest+ports.game  conquest.game  crane_island.game  default.game  develop.c  discard.c  glib-driver.c  glib-driver.h  gold.c  henjes.game  iles.game  lobby.game  lorindol.game  main.c  meta.c  north_america.game  player.c  pregame.c  resource.c  robber.c  seafarers-gold.game  seafarers.game  server.c  server.h  small.game  (+5 more)
server/gtk/: .gitignore  Makefile.am  main.c  pioneers-server-gtk.desktop.in
