# Pioneers - Implementation of the excellent Settlers of Catan board game.
#   Go buy a copy.
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA

nouvelliathemedir = $(pioneers_themedir)/Nouvellia

nouvelliatheme_DATA = \
	client/gtk/data/themes/Nouvellia/ATTRIB \
	client/gtk/data/themes/Nouvellia/board.svg \
	client/gtk/data/themes/Nouvellia/brick.svg \
	client/gtk/data/themes/Nouvellia/desert.svg \
	client/gtk/data/themes/Nouvellia/gold.svg \
	client/gtk/data/themes/Nouvellia/grain.svg \
	client/gtk/data/themes/Nouvellia/lumber.svg \
	client/gtk/data/themes/Nouvellia/ore.svg \
	client/gtk/data/themes/Nouvellia/port-brick.svg \
	client/gtk/data/themes/Nouvellia/port-grain.svg \
	client/gtk/data/themes/Nouvellia/port-lumber.svg \
	client/gtk/data/themes/Nouvellia/port-ore.svg \
	client/gtk/data/themes/Nouvellia/port-wool.svg \
	client/gtk/data/themes/Nouvellia/sea.svg \
	client/gtk/data/themes/Nouvellia/theme.cfg \
	client/gtk/data/themes/Nouvellia/wool.svg

EXTRA_DIST += $(nouvelliatheme_DATA)
